--- a/build.gradle
+++ b/build.gradle
@@ -10,14 +10,15 @@ plugins {
 
 repositories {
     mavenLocal()
-    maven {
-        url = 'http://repo.maven.apache.org/maven2'
-    }
+    jcenter()
+    mavenCentral()
 }
 
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.2'
+    compile group: 'org.gradle', name: 'gradle-tooling-api', version: '4.3'
+    compile 'org.jtwig:jtwig-core:5.87.0.RELEASE'
     testCompile 'org.slf4j:slf4j-jdk14:1.7.5'
     testCompile 'junit:junit:4.12'
 }
@@ -25,7 +26,7 @@ dependencies {
 apply plugin: "maven"
 group = 'com.tifires.genesis.packager'
 version = '0.1'
-description = 'GenesisPackager'
+description = 'genesis-packager'
 sourceCompatibility = '1.8'
 
 publishing {
