handle properties resources update build template update gradle-tooling-api version 6.4

--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ repositories {
 dependencies {
     compile 'org.slf4j:slf4j-api:1.7.5'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.2'
-    compile group: 'org.gradle', name: 'gradle-tooling-api', version: '6.0.1'
+    compile 'org.gradle:gradle-tooling-api:6.4'
     compile 'org.jtwig:jtwig-core:5.87.0.RELEASE'
     testCompile 'org.slf4j:slf4j-jdk14:1.7.5'
     testCompile 'junit:junit:4.12'
@@ -34,8 +34,8 @@ sourceCompatibility = '1.8'
 
 publishing {
     publications {
-        maven(MavenPublication) {
-            from(components.java)
+        mavenJava(MavenPublication) {
+            from components.java
         }
     }
 }
